# Copyright 2014 – present by the Mesoscale Ocean and Atmospheric Dynamics (MOAD) group
# in the Department of Earth, Ocean, and Atmospheric Sciences
# at The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "salishsea_site"
dynamic = [ "version" ]
description = """\
    Pyramid web app that serves the salishsea.eos.ubc.ca site.\
    """
readme = "README.rst"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Doug Latornell", email= "dlatornell@eoas.ubc.ca" }
]
keywords = [
    "oceanography",
    "ocean modelling",
    "UBC-MOAD",
    "Salish Sea",
    "SalishSeaCast",
    "website",
    "pyramid-framework"]
dependencies = [
    # see envs/environment-prod.yaml for conda environment production installation,
    # see envs/environment-dev.yaml for conda environment dev installation,
    # see envs/requirements.txt for package versions used during recent development
    "arrow",
    "attrs",
    "pyramid",
    "pyramid_mako",
    "pyyaml",
    "requests",
    "sentry-sdk",
    "supervisor",
    "waitress",
]

[project.urls]
"Documentation" = "https://salishsea-site.readthedocs.io"
"Changelog" = "https://github.com/SalishSeaCast/salishsea-site/releases"
"Issue Tracker" = "https://github.com/SalishSeaCast/salishsea-site/issues"
"Source Code" = "https://github.com/SalishSeaCast/salishsea-site"

[project.entry-points."paste.app_factory"]
main = "salishsea_site:main"


[tool.coverage.run]
branch = true
source = ["salishsea_site", "tests"]

[tool.coverage.report]
show_missing = true


[tool.hatch.build.targets.wheel]
include = [
    "salishsea_site",
    "images",
]

[tool.hatch.version]
path = "salishsea_site/__about__.py"
