; Copyright 2014 – present by the Mesoscale Ocean and Atmospheric Dynamics (MOAD) group
; in the Department of Earth, Ocean, and Atmospheric Sciences
; at The University of British Columbia
;
; Licensed under the Apache License, Version 2.0 (the "License");
; you may not use this file except in compliance with the License.
; You may obtain a copy of the License at
;
;    https://www.apache.org/licenses/LICENSE-2.0
;
; Unless required by applicable law or agreed to in writing, software
; distributed under the License is distributed on an "AS IS" BASIS,
; WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
; See the License for the specific language governing permissions and
; limitations under the License.

; SPDX-License-Identifier: Apache-2.0


[metadata]
name = salishsea_site
version = attr: salishsea_site.__version__
description = salishsea.eos.ubc.ca site web app
author = Doug Latornell
author_email = dlatornell@eoas.ubc.ca
url = https://salishsea-site.readthedocs.io/en/latest/
long_description = file: README.rst
license = Apache License, Version 2.0
platform = Linux
keywords = web pyramid pylons
classifiers =
    Development Status :: 5 - Production
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    ; see envs/environment-prod.yaml for conda environment production installation,
    ; see envs/environment-dev.yaml for conda environment dev installation,
    ; see envs/requirements.txt for package versions used during recent development
    arrow
    attrs
    pyramid
    pyramid_mako
    pyyaml
    requests
    sentry-sdk
    supervisor
    waitress
